--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do list</title>
-</head>
+<%- include('header'); -%>
 <body>
-    <% if (day==="Saturday" || day==="Sunday"){ %>
-        <h1 style="color:green">Today is <%= day %></h1>
-    <% }else {%>
-        <h1 style="color:red">Today is <%= day %></h1>
-    <%}%>
-    
-    
+    <div class="box" id="heading">
+        <h1><%= listTitle %></h1>
+        <h1>Today is <%= day %></h1>
+    </div>
+<div class="box">
+    <% listItem.forEach((e)=>{ %>
+        <div class="item">
+    <input type="checkbox">
+        <p><%=e%></p></div>
+   <% }); %>
+
+   <form action="/" method="post">
+    <input name="todoEntry" type="text" placeholder="New item" autocomplete="off">
+    <button type="submit" name="list" value=<%= listTitle %> >+</button>
+</form>
+
+</div>
 </body>
-</html>
+<%- include('footer'); -%>
