added date module and code refactoring

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,7 +2,7 @@
 <body>
     <div class="box" id="heading">
         <h1><%= listTitle %></h1>
-        <h1>Today is <%= day %></h1>
+        <h1><%= day %></h1>
     </div>
 <div class="box">
     <% listItem.forEach((e)=>{ %>
