removed the static arraylist and added mongoDB

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
     <% listItem.forEach((e)=>{ %>
         <div class="item">
     <input type="checkbox">
-        <p><%=e%></p></div>
+        <p><%=e.name%></p></div>
    <% }); %>
 
    <form action="/" method="post">
