--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,12 +6,14 @@
     </div>
 <div class="box">
     <% listItem.forEach((e)=>{ %>
+        <form action="/delete" method="post">
         <div class="item">
-    <input type="checkbox">
+    <input type="checkbox" name="checkbox" value="<%=e._id %>" onChange="this.form.submit()">
         <p><%=e.name%></p></div>
+    </form>
    <% }); %>
 
-   <form action="/" method="post">
+   <form class="item" action="/" method="post">
     <input name="todoEntry" type="text" placeholder="New item" autocomplete="off">
     <button type="submit" name="list" value=<%= listTitle %> >+</button>
 </form>
