added the ability to delete items from the custom lists. Added lodash so the urls are not depended on the casing

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,6 +9,7 @@
         <div class="item">
     <input type="checkbox" name="checkbox" value="<%=e._id %>" onChange="this.form.submit()">
         <p><%=e.name%></p></div>
+        <input type="hidden" name="listName" value="<%= listTitle %>"></input>
     </form>
    <% }); %>
 
